Closed
Bug 608239
Opened 15 years ago
Closed 15 years ago
Android 10/29 nightly build doesn't load any webpage
Categories
(Firefox for Android Graveyard :: General, defect)
Tracking
(fennec2.0b2+)
VERIFIED
FIXED
Tracking | Status | |
---|---|---|
fennec | 2.0b2+ | --- |
People
(Reporter: anamaria.moldovan, Unassigned)
Details
User-Agent: Mozilla/5.0 (Windows NT 6.1; rv:2.0b8pre) Gecko/20101027 Firefox/4.0b8pre
Build Identifier: Mozilla/5.0 (Android; Linux armv7l; rv:2.0b8pre) Gecko/201029 Firefox/4.0b8pre Fennec/4.0b2pre
After installing the build 20101029, and loading any webpage in the browser, the page doesn't load; it stays grey.
Reproducible: Always
Steps to Reproduce:
1. Install the build 20101029
2. Load any wegpage (e.g. www.cnn.com )
Actual Results:
Nothing happens: the page stays grey. (it doesn't load at all not even for 1 second)
Expected Results:
The webpage should load.
Updated•15 years ago
|
OS: Other → Android
Hardware: Other → ARM
Comment 1•15 years ago
|
||
10/29 nightly is working fine on my nexus one. What devices are failing?
Comment 2•15 years ago
|
||
Devices used:
Motorola Droid 2
HTC Desire
Samsung Galaxy S Captivated
Comment 3•15 years ago
|
||
From IRC, Ioana said that she tested the tinderbox builds to find a regression range. The last build that worked was 1288328842, which corresponds to changeset ce1801c6ba95.
The next changeset is:
http://hg.mozilla.org/mozilla-central/rev/99233ad2ff70 which is bug 607534.
Tinderbox builds are here:
http://ftp.mozilla.org/pub/mozilla.org/mobile/tinderbox-builds/mozilla-central-android-r7/
Comment 4•15 years ago
|
||
Also, Ioana says that local pages, like about:home are working fine. Just remote web content is failing.
Comment 5•15 years ago
|
||
I installed fennec-4.0b2pre.en-US.eabi.arm1.apk on my HTC Desire running Android 2.1 and I can't load any pages on Fennec.
Comment 6•15 years ago
|
||
Installed onto stock Nexus One:
ftp://ftp.mozilla.org/pub/mobile/nightly/latest-mozilla-central-android-r7/fennec-4.0b2pre.multi.eabi-arm.apk
tested local and non-local sites via Wifi and 3G - no issues
Comment 7•15 years ago
|
||
(In reply to comment #6)
> Installed onto stock Nexus One:
sorry, forgot to say it is running Froyo
Comment 8•15 years ago
|
||
Just installed the latest nightly on my Droid 2 running Android 2.2 and all I get is gray pages. Pages don't even seem to load. Hitting reload doesn't do anything.
Comment 9•15 years ago
|
||
We used :
Motorola Droid 2: Android 2.2
HTC Desire: Android 2.1
Samsung Galaxy S Captivated: Android 2.1 update 1
Comment 10•15 years ago
|
||
Comment 11•15 years ago
|
||
Works on Nexus One 2.2.1 FRG83
Fail on HTC Wildire 2.1-update1
Updated•15 years ago
|
tracking-fennec: --- → ?
Updated•15 years ago
|
tracking-fennec: ? → 2.0b2+
Comment 12•15 years ago
|
||
fixed by backout
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 13•15 years ago
|
||
verified FIXED on build:
Mozilla/5.0 (Android; Linux armv71; rv:2.0b8pre) Gecko/20101029 Namoroka/4.0b8pre Fennec/4.0b2pre
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•