Bug 608239: Backout changeset 99233ad2ff70 a=fennec-should-load-pages