other-licenses/android/APKOpen.h
@@ -45,16 +45,6 @@ struct mapping_info {
   size_t offset;
 };
 
-const struct mapping_info * getLibraryMapping();
-
-#define MAX_LIB_CACHE_ENTRIES 32
-#define MAX_LIB_CACHE_NAME_LEN 32
-
-struct lib_cache_info {
-  char name[MAX_LIB_CACHE_NAME_LEN];
-  int fd;
-};
-
-const struct lib_cache_info * getLibraryCache();
+extern struct mapping_info * lib_mapping;
 
 #endif /* APKOpen_h */
